samples/_failures_safe/1761096689_281596_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_688c8261.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
